<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/bottom_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/primary_font_color"
        app:behavior_hideable="true"
        app:behavior_peekHeight="500dp"
        app:elevation="4dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:id="@+id/menu_layout_1"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.edusoho.kuozhi.clean.widget.CourseMenuButton
                android:id="@+id/btn_course_menu_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:button_image="@string/font_info"
                app:button_text="@string/course_menu_info"
                app:button_text_color="@color/disabled2_hint_color"
                app:button_text_size="@dimen/font_l"
                app:image_background="@drawable/course_info_menu_icon_bg"
                app:image_color="@android:color/white"
                app:image_size="22sp" />

            <com.edusoho.kuozhi.clean.widget.CourseMenuButton
                android:id="@+id/btn_course_menu_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:button_image="@string/font_question"
                app:button_text="@string/course_menu_question"
                app:button_text_color="@color/disabled2_hint_color"
                app:button_text_size="15sp"
                app:image_background="@drawable/course_question_menu_icon_bg"
                app:image_color="@android:color/white"
                app:image_size="22sp" />

            <com.edusoho.kuozhi.clean.widget.CourseMenuButton
                android:visibility="gone"
                android:id="@+id/btn_course_menu_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:button_image="@string/new_font_share"
                app:button_text="@string/course_menu_share"
                app:button_text_color="@color/disabled2_hint_color"
                app:button_text_size="15sp"
                app:image_background="@drawable/course_share_menu_icon_bg"
                app:image_color="@android:color/white"
                app:image_size="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_layout_2"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu_layout_1"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.edusoho.kuozhi.clean.widget.CourseMenuButton
                android:id="@+id/btn_course_menu_discuss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:button_image="@string/new_font_grade"
                app:button_text="@string/course_menu_discuss"
                app:button_text_color="@color/disabled2_hint_color"
                app:button_text_size="@dimen/font_l"
                app:image_background="@drawable/course_discuss_menu_icon_bg"
                app:image_color="@android:color/white"
                app:image_size="22sp" />

            <com.edusoho.kuozhi.clean.widget.CourseMenuButton
                android:id="@+id/btn_course_menu_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                app:button_image="@string/discuss_publish"
                app:button_text="@string/course_menu_rate"
                app:button_text_color="@color/disabled2_hint_color"
                app:button_text_size="15sp"
                app:image_background="@drawable/course_rate_menu_icon_bg"
                app:image_color="@android:color/white"
                app:image_size="22sp" />

            <com.edusoho.kuozhi.clean.widget.CourseMenuButton
                android:id="@+id/btn_course_menu_void"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:visibility="gone"
                app:button_image="@string/new_font_share"
                app:button_text="@string/course_menu_share"
                app:button_text_color="@color/disabled2_hint_color"
                app:button_text_size="15sp"
                app:image_background="@drawable/course_info_menu_icon_bg"
                app:image_color="@android:color/white"
                app:image_size="22sp" />

        </LinearLayout>

        <com.edusoho.kuozhi.clean.widget.ESIconView
            android:id="@+id/tv_close_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/menu_layout_2"
            android:layout_margin="10dp"
            android:padding="30dp"
            android:text="@string/discuss_close"
            android:textColor="@color/disabled2_hint_color"
            android:textSize="@dimen/font_l" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>