<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/tvWifiDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="@string/setting_online_duration"
            android:clickable="false"
            android:textColor="@color/grey"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tv_scan"
            android:alpha="0.54"
            android:text="@string/online_duration_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_font_size" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_edge_height"
        android:src="@color/base_black_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="@string/online_duration_start"
            android:clickable="false"
            android:textColor="@color/grey"
            android:textSize="@dimen/medium_font_size" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_edge_height"
        android:src="@color/base_black_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/tvStartEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="@string/online_duration_end"
            android:clickable="false"
            android:textColor="@color/grey"
            android:textSize="@dimen/medium_font_size" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_edge_height"
        android:src="@color/base_black_12" />

</LinearLayout>
