<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="4dp">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/play_with_audio_mode"
        android:textColor="@color/primary_font_color"
        android:textSize="@dimen/font_m"
        tools:text="确定关闭？"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_message"
        android:layout_margin="8dp"
        android:layout_toLeftOf="@+id/tv_audio"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:minHeight="36dp"
        android:minWidth="64dp"
        android:padding="8dp"
        android:text="@string/video_learn"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/font_m"
        tools:text="确定"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_message"
        android:layout_margin="8dp"
        android:layout_toLeftOf="@+id/tv_cancel"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:minHeight="36dp"
        android:minWidth="64dp"
        android:padding="8dp"
        android:text="@string/audio_learn"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/font_m"
        tools:text="确定"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_message"
        android:layout_margin="8dp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:minHeight="36dp"
        android:minWidth="64dp"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/font_m"
        tools:text="关闭"
        tools:visibility="visible" />

</RelativeLayout>